Fix device listing spacing

--- a/_sass/_medium.scss
+++ b/_sass/_medium.scss
@@ -103,7 +103,7 @@
 }
 
 .device {
-	margin: 0 0 1em 1em;
+	margin: 0 0 1em 1.5em;
 	strong {
 		display: block;
 	}
